--- a/nginx-high-cpu/Dockerfile.nginx
+++ b/nginx-high-cpu/Dockerfile.nginx
@@ -1,6 +1,6 @@
 FROM nginx
 
-LABEL maintainer="feiskyer@gmail.com"
+LABEL maintainer="zhaoyangpp@gmail.com"
 
 ADD app/ /app
 ADD nginx.conf /etc/nginx/nginx.conf
